# AutoSteer

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sql  nginx.conf
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0982e84e9625_initial.py  a1b2c3d4e5f6_memory_insights.py
backend/cli/: display.py  main.py
backend/src/: auth.py  config.py  database.py
backend/src/agents/definitions/: master_orchestrator.yaml
backend/src/agents/definitions/customer_success/: orchestrator.yaml
backend/src/agents/definitions/data_analytics/: orchestrator.yaml
backend/src/api/: main.py
backend/src/api/routes/: agents.py  approvals.py  artifacts.py  auth.py  billing.py  chat.py  conversations.py  custom_agents.py  files.py  integrations.py  memory.py  preferences.py  prompts.py  tools.py  websocket.py  workflows.py
backend/src/engine/: agent_runtime.py  cache.py  conditional.py  dag_executor.py  dream.py  interfaces.py  llm.py  loader.py  memory_manager.py  orchestrator.py  prompt_template.py  retry.py  router.py  scheduler.py  schemas.py  tool_aliases.py  tool_executor.py  workflow_executor.py  workflow_repository.py
backend/src/integrations/: __init__.py  ai_ops.py  api_tester.py  apollo.py  arxiv.py  crawler.py  credentials.py  crypto.py  ddg_search.py  document_gen.py  docusign.py  email.py  embeddings.py  figma.py  files.py  ga4.py  github.py  google.py  hubspot.py  intercom.py  lighthouse.py  linear.py  local_llm.py  notion.py  policy.py  posthog.py  providers.py  rag.py  reach.py  sandbox.py  search.py  sentry.py  slack.py  stripe_metrics.py  tts.py  typeform.py  url_fetch.py  wandb.py  zapier.py  zendesk.py
backend/src/messaging/: __init__.py  bus.py  schemas.py
backend/src/models/: __init__.py  agent.py  approval.py  artifact.py  conversation.py  document_chunk.py  integration_connection.py  memory_embedding.py  memory_fact.py  memory_insight.py  message.py  shared_state.py  task.py  user.py  workflow.py
backend/src/workflows/: content_approval.yaml  contract_redline.yaml  research_report.yaml  voice_briefing.yaml
backend/tests/: test_agent_runtime.py  test_api.py  test_artifacts.py  test_config.py  test_dream_and_reach.py  test_integration.py  test_llm.py  test_loader.py  test_messaging.py  test_orchestrator.py  test_router.py  test_schemas.py  test_tools.py  test_trace_events.py
docs/: integrations.md
(+202 files in other folders)
