[project]
name = "AutoSteer"
version = "0.1.0"
description = "AutoSteer — Multi-Agent Orchestration System. 43 agents across 12 departments."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "litellm>=1.55.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "cryptography>=42.0.0",
    "trafilatura>=2.0.0",
    "duckduckgo-search>=8.0",
    "beautifulsoup4>=4.12",
    "pypdf2>=3.0",
    "lxml>=5.0",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "pgvector>=0.4",
    "openai>=1.0",
    "python-multipart>=0.0.9",
    "feedparser>=6.0",
    "youtube-transcript-api>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
# Optional integration SDKs. Code guards these with ImportError and degrades
# gracefully, so they are not required for core install.
integrations = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-analytics-data>=0.18",
    "e2b-code-interpreter>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
